--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -562,6 +562,12 @@ canvas {
     font-size: 10px;
 }
 
+@media screen and (min-width: 320px) and (max-width: 500px) {
+    .main-table-author__list li p {
+        font-size: 9px;
+    }
+}
+
 @media screen and (min-width: 744px) and (max-width: 1599px) {
     .main-table__column {
         padding: 7px;
